--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -13,14 +13,6 @@
     color: #f5e9ff;
   }
 
-  /* Wallet Button */
-  #walletBar {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    z-index: 50;
-  }
-
   #connect-wallet-btn {
     padding: 14px 22px;
     font-size: 1.05em;
@@ -233,54 +225,42 @@
   </div>
 </div>
 
+<!-- Proton SDK -->
 <script src="https://unpkg.com/@proton/web-sdk@latest"></script>
 <script>
 let session = null;
 let actor = null;
-
-// ✅ YOUR BACKEND URL - READY TO GO
 const PANDA_BACKEND = "https://panda-nft-backend.onrender.com";
 
-// Load Proton Pandas ONLY from your backend
 async function loadNFTs(wallet) {
   const nftGrid = document.getElementById("nftGrid");
   nftGrid.innerHTML = "Loading Proton Pandas...";
-
   try {
     const resp = await fetch(`${PANDA_BACKEND}/api/pandas?wallet=${wallet}`);
     if (!resp.ok) throw new Error("Backend error " + resp.status);
-
     const nfts = await resp.json();
     nftGrid.innerHTML = "";
-
     if (!nfts || nfts.length === 0) {
       nftGrid.innerHTML = "<p>No Proton Pandas found in wallet.</p>";
       return;
     }
-
-    console.log("Loaded NFTs:", nfts); // DEBUG: Check what backend returns
-
     nfts.forEach(nft => {
-      const imgURL = `${PANDA_BACKEND}/api/panda-image/${nft.template_id}`;
+      const imgURL = nft.image;
       const name = nft.name || "Proton Panda";
-
-      console.log(`Rendering ${name}: ${imgURL}`); // DEBUG: Check image URLs
-
       const card = document.createElement("div");
       card.className = "nft-card";
       card.innerHTML = `
-        card.innerHTML = `
-  <img src="${imgURL}" alt="${name}" loading="lazy">
-  <div>${name}</div>
-`;
+        <img src="${imgURL}" 
+             alt="${name}" 
+             onerror="this.src='https://via.placeholder.com/150x150/333/fff?text=P#${nft.template_id}'"
+             loading="lazy">
+        <div>${name}</div>
+      `;
       card.addEventListener("click", () => {
         document.getElementById("selectedNFT").src = imgURL;
         document.getElementById("lendBtn").disabled = false;
-        // Store selected NFT data for lending
         window.selectedNFT = nft;
-        console.log("Selected:", nft);
       });
-
       nftGrid.appendChild(card);
     });
   } catch (err) {
@@ -289,10 +269,23 @@ async function loadNFTs(wallet) {
   }
 }
 
-// Connect wallet
 document.getElementById("connect-wallet-btn").addEventListener("click", async () => {
+  const display = document.getElementById("wallet-display");
+  display.innerText = "⏳ Connecting...";
   try {
-    const { session: newSession } = await ProtonWebSDK({
+    let connectFunc = null;
+    // Detect newer SDK export style
+    if (typeof ProtonWebSDK === "object" && typeof ProtonWebSDK.connect === "function") {
+      connectFunc = ProtonWebSDK.connect;
+    } else if (typeof ProtonWebSDK === "function") {
+      connectFunc = ProtonWebSDK;
+    } else if (typeof window.ProtonWebSDK?.connect === "function") {
+      connectFunc = window.ProtonWebSDK.connect;
+    }
+
+    if (!connectFunc) throw new Error("Proton SDK not loaded correctly.");
+
+    const { session: newSession } = await connectFunc({
       linkOptions: { endpoints: ["https://proton.greymass.com"] },
       selectorOptions: {
         appName: "Panda Pawn Shop",
@@ -302,20 +295,16 @@ document.getElementById("connect-wallet-btn").addEventListener("click", async ()
     });
 
     session = newSession;
-    if (!session || !session.auth) throw new Error("No auth returned");
-    actor = session.auth.actor;
+    actor = session?.auth?.actor;
+    if (!actor) throw new Error("No wallet account authorized.");
 
-    document.getElementById("wallet-display").innerText = `✅ Connected: ${actor}`;
-
-    // Load Proton Pandas automatically after wallet connection
+    display.innerText = `✅ Connected: ${actor}`;
     await loadNFTs(actor);
-
   } catch (err) {
-    console.error(err);
-    document.getElementById("wallet-display").innerText = `❌ Connect failed: ${err.message}`;
+    console.error("Wallet connect error:", err);
+    display.innerText = `❌ Connect failed: ${err.message}`;
   }
 });
 </script>
-
 </body>
 </html>
